# Epitech-Repisitories

./: README.md
.github/workflows/: main.yml
TEK02/IndieStudio/: .gitignore  CMakeLists.txt  README.md  install-hooks.sh  run.sh
TEK02/IndieStudio/assets/models/: bomb.glb  explosion.gltf  stone.gltf  untitled.iqm  untitledr.iqm
TEK02/IndieStudio/bonus/doc/: Makefile
TEK02/IndieStudio/bonus/doc/doxygen/: Doxyfile
TEK02/IndieStudio/bonus/doc/sphinx/: conf.py  index.rst
TEK02/IndieStudio/bonus/doc/sphinx/engine/: audio.rst  engine.rst  keyboard.rst  math.rst  mouse.rst  time.rst  vector.rst  window.rst
TEK02/IndieStudio/bonus/doc/sphinx/engine/graphic/: camera.rst  color.rst  graphic.rst
TEK02/IndieStudio/bonus/doc/sphinx/engine/graphic/2d/: 2d.rst  button.rst  font.rst  image.rst  sprite.rst  text.rst  texture.rst
TEK02/IndieStudio/bonus/doc/sphinx/engine/graphic/3d/: 3d.rst  billboard.rst  material.rst  mesh.rst  model.rst  shader.rst  skybox.rst
TEK02/IndieStudio/bonus/doc/sphinx/game/: algorithm.rst  game.rst  managers.rst  utils.rst
TEK02/IndieStudio/bonus/doc/sphinx/game/system/: components.rst  entities.rst  item.rst  system.rst
TEK02/IndieStudio/scripts/: pre-commit.sh
TEK02/IndieStudio/src/: IndieStudio.cpp  IndieStudio.hpp  main.cpp
TEK02/IndieStudio/src/engine/: Engine.hpp
TEK02/IndieStudio/src/engine/audio/: Audio.cpp  Audio.hpp
TEK02/IndieStudio/src/engine/audio/music/: Music.cpp
TEK02/IndieStudio/src/engine/audio/sound/: Sound.cpp
TEK02/IndieStudio/src/engine/event/keyboard/: Keyboard.cpp  Keyboard.hpp
TEK02/IndieStudio/src/engine/event/mouse/: Cursor.cpp  Cursor.hpp  Mouse.cpp  Mouse.hpp
TEK02/IndieStudio/src/engine/graphic/: Graphic.hpp
TEK02/IndieStudio/src/engine/graphic/2d/: 2d.hpp
TEK02/IndieStudio/src/engine/graphic/2d/animation/: Animation.cpp  Animation.hpp
TEK02/IndieStudio/src/engine/graphic/2d/gui/button/: Button.cpp  Button.hpp
TEK02/IndieStudio/src/engine/graphic/2d/gui/text/: Text.cpp  Text.hpp  TextBox.cpp  TextBox.hpp
TEK02/IndieStudio/src/engine/graphic/2d/image/: Image.cpp  Image.hpp
TEK02/IndieStudio/src/engine/graphic/2d/sprite/: Sprite.cpp  Sprite.hpp
TEK02/IndieStudio/src/engine/graphic/2d/texture/: Texture.cpp  Texture.hpp
TEK02/IndieStudio/src/engine/graphic/3d/: 3d.hpp
TEK02/IndieStudio/src/engine/graphic/3d/billboard/: Billboard.cpp  Billboard.hpp
TEK02/IndieStudio/src/engine/graphic/3d/material/: Material.cpp  Material.hpp
TEK02/IndieStudio/src/engine/graphic/3d/mesh/: Mesh.cpp  Mesh.hpp
TEK02/IndieStudio/src/engine/graphic/3d/model/: Model.cpp  Model.hpp
TEK02/IndieStudio/src/engine/graphic/3d/model/animated_model/: AnimatedModel.cpp  AnimatedModel.hpp
TEK02/IndieStudio/src/engine/graphic/3d/shader/: Shader.cpp  Shader.hpp
TEK02/IndieStudio/src/engine/graphic/3d/skybox/: Skybox.cpp  Skybox.hpp
TEK02/IndieStudio/src/engine/graphic/camera/: Camera.cpp  Camera.hpp
TEK02/IndieStudio/src/engine/graphic/color/: Color.hpp
TEK02/IndieStudio/src/engine/math/: Math.hpp
TEK02/IndieStudio/src/engine/math/rectangle/: Rectangle.hpp
TEK02/IndieStudio/src/engine/math/vector/: Vector2.hpp  Vector3.hpp  Vector4.hpp
TEK02/IndieStudio/src/engine/time/: Time.cpp  Time.hpp
TEK02/IndieStudio/src/engine/window/: Window.cpp  Window.hpp
TEK02/IndieStudio/src/game/algorithms/: EntityManager.hpp
TEK02/IndieStudio/src/game/algorithms/patterns/: FillMap.cpp  Pattern.cpp  Pattern.hpp
TEK02/IndieStudio/src/game/managers/: EntityManager.hpp  IManager.hpp  ItemManager.hpp  SceneManager.cpp  SceneManager.hpp
TEK02/IndieStudio/src/game/scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  PreGameScene.cpp  PreGameScene.hpp  Scene.hpp  SettingScene.cpp  SettingScene.hpp  TutoScene.cpp  TutoScene.hpp
TEK02/IndieStudio/src/game/system/: ECS.cpp  ECS.hpp  IComponent.hpp  IEntityContainer.hpp
TEK02/IndieStudio/src/game/system/components/: AnimatedModelComponent.cpp  AnimatedModelComponent.hpp  BombExplosionable.hpp  IAComponent.cpp  IAComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  Positionable.cpp  Positionable.hpp  Transformable.cpp  Transformable.hpp
TEK02/IndieStudio/src/game/system/entities/: EntityAI.cpp  EntityAI.hpp  EntityLiving.cpp  EntityLiving.hpp  EntityPlayer.cpp  EntityPlayer.hpp  ItemEntity.hpp
TEK02/IndieStudio/src/game/system/items/: Bomb.cpp  Bomb.hpp  Item.hpp  PowerUp.cpp  PowerUp.hpp
TEK02/IndieStudio/src/game/system/items/bombs/: FireResidue.cpp  FireResidue.hpp  SpawnableBomb.hpp
TEK02/IndieStudio/src/game/system/items/powerups/: BombUP.hpp  FireUP.hpp  SpeedUP.hpp  WallPass.hpp
TEK02/IndieStudio/src/game/utils/: Matrix.hpp  References.hpp  Timer.hpp  Vector.hpp
TEK02/IndieStudio/src/server/: IServer.hpp
TEK02/IndieStudio/src/server/linux/: LinuxServer.hpp
TEK02/IndieStudio/src/tools/: LocalClient.cpp  LocalClient.hpp  NCurses.cpp  NCurses.hpp  PropertyLoader.hpp
TEK02/IndieStudio/src/utils/: CustomError.hpp
TEK02/Zappy/GUI/: CMakeLists.txt  run.sh
TEK02/Zappy/GUI/assets/: amongus.iqm  cubemap.fs  cubemap.vs  skybox.vs
TEK02/Zappy/GUI/src/: Main.cpp
TEK02/Zappy/GUI/src/common/: ErrorManager.hpp  Map.hpp  Matrix.hpp  Player.cpp  Player.hpp  Tile.cpp  Tile.hpp
TEK02/Zappy/GUI/src/display/: Display.cpp  Display.hpp
TEK02/Zappy/GUI/src/display/engine/: Engine.hpp
TEK02/Zappy/GUI/src/display/engine/audio/: Audio.cpp  Audio.hpp
TEK02/Zappy/GUI/src/display/engine/audio/music/: Music.cpp
TEK02/Zappy/GUI/src/display/engine/audio/sound/: Sound.cpp
TEK02/Zappy/GUI/src/display/engine/event/: Event.hpp
TEK02/Zappy/GUI/src/display/engine/event/keyboard/: Keyboard.cpp  Keyboard.hpp
TEK02/Zappy/GUI/src/display/engine/math/: Math.hpp
TEK02/Zappy/GUI/src/display/engine/time/: Time.cpp  Time.hpp
TEK02/Zappy/GUI/src/display/engine/window/: Window.cpp  Window.hpp
TEK02/Zappy/GUI/src/display/fruits/: Fruits.cpp  Fruits.hpp
TEK02/Zappy/GUI/src/display/teams/: Teams.cpp  Teams.hpp
TEK02/Zappy/GUI/src/interpreter/: Interpreter.cpp  Interpreter.hpp
TEK02/Zappy/GUI/src/listener/: Listener.cpp  Listener.hpp
(+704 files in other folders)
